[package]
name = "video_push"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
tokio = { version = "1.25.0", features = ["full"] }
tokio-postgres = "0.7.7"
