[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
common = { version = "0.1.0", path = "../common" }
cookie = "0.17.0"
env_logger = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["serde_json"] }
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["full"] }
urlencoding = "2.1.2"
